# cython-scratch

./: CMakeLists.txt  Makefile  README.md
callback1/: Makefile  demo.pyx  test_callback.py
callback2/: demo.pyx  setup.py  test_callback.py
callback3/: README.md  demo.pyx  test_callback.py
callback4/: demo.pyx  test_callback.py
forward_typedef/: Makefile  demo.pyx
nested/: Makefile  demo.pyx  test_nested.py
queue/: Makefile  pyqueue.pyx  setup.py
scratch/: pyproject.toml
scratch/src/: CMakeLists.txt  test_callback.py
scratch/src/scratch/: scratch.pxd  scratch.pyx
src/: CMakeLists.txt
src/scratch/: __init__.py  pad.c  pad.h  scratch.pxd  scratch.pyx
tests/: test_scratch.py
